--- a/app/views/layouts/main.hbs
+++ b/app/views/layouts/main.hbs
@@ -1,6 +1,9 @@
 <html>
   <head>
     <title>Express JSON Retrieval</title>
+    <link rel="stylesheet" type="text/css" href="/css/base.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   </head>
   <body>
     {{{body}}}
