--- a/app/views/layouts/main.hbs
+++ b/app/views/layouts/main.hbs
@@ -1,8 +1,13 @@
-<html>
+<!doctype html>
+<html lang="en">
   <head>
-    <title>Express JSON Retrieval</title>
+    <!-- meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- styling -->
+    <title>Weatherman</title>
     <link rel="stylesheet" type="text/css" href="/css/base.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   </head>
   <body>
