--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,29 +1,149 @@
-body{
-    background-color: darkblue;
-}
 
-#all{
-    margin: 5% 20%;
-    background-color: darkcyan;
-}
-
-#cities{
-    float:left;
-    padding: 2.5%;
+body {
+    background: rgb(249,180,84);
+    background: linear-gradient(0deg, rgba(249,180,84,1) 0%, rgba(216,216,94,1) 20%, rgba(86,150,235,1) 42%, rgba(68,141,255,1) 100%);    
+    height: 100vh;
+    width: 100vw;
     margin: auto;
-    max-width: 45%;
-    background-color: #92a4dc;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
 }
 
-#flights{
-    float:left;
-    padding: 2%;
+#airports {
+    background: #c0d0ff88;
+    border-radius: 10px;
     margin: auto;
-    max-width: 45%;
-    background-color: cornflowerblue;
-} 
-
-.cityButton{
-    width: 100%;
-    background-color: #66a4dc;4
+    max-height: 100%;
+    max-width: 95%;
+    overflow-x: initial;
+    overflow-y: auto;
+    padding: 1%;
 }
+
+#cities {
+    background: #c0d0ff88;
+    border-radius: 10px;
+    float: left;
+    max-width: 30%;
+    overflow-x: clip;
+    overflow-y: auto;
+    padding: 1%;
+}
+
+#flights {
+    background: #c0d0ff88;
+    border-radius: 10px;
+    float: left;
+    max-height: 100%;
+    max-width: 65%;
+    overflow-x: initial;
+    overflow-y: auto;
+    padding: 1%;
+}
+
+
+.airportButton {
+    background: #79c0ff;
+    border: 5px;
+    border-color: #9999ff44;
+    border-radius: 5px;
+    border-style: outset;
+    break-inside: avoid;
+    float: left;
+    margin: 1% 0;
+    padding: 1%;
+    text-align: center;
+    width: 95%;
+}
+
+.cityButton {
+    background: #7ac1ff;
+    border: 5px;
+    border-color: #9999ff44;
+    border-radius: 5px;
+    border-style: outset;
+    break-inside: avoid;
+    margin: 1% 0;
+    padding: 1%;
+    width: 95%;
+}
+
+.containAll {
+    clear: both;
+    height: 95vh;
+    width: 95vw;
+    margin: auto;
+    padding: 1%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.flightButton {
+    background: #2bbfff;
+    border-color: #9999ff44;
+    border-radius: 5px;
+    border-style: solid;
+    break-inside: avoid;
+    float: left;
+    margin: 1% 0;
+    padding: 1%;
+    text-align: center;
+    width: 95%;
+}
+
+ @media only screen and (min-width: 600px) and (min-height: 800px), (min-width: 800px) and (min-height: 600px){
+        #airports {
+            background:#c0d0ff88;
+            border-radius:10px;
+            column-count:5;
+            column-gap:1%;
+            margin:auto;
+            max-height:95%;
+            max-width:80%;
+            overflow-x: initial;
+            overflow-y: auto;
+            padding:1%;
+        }
+
+        #flights {
+            background:#c0d0ff88;
+            border-radius:10px;
+            column-count:5;
+            column-gap:1%;
+            float:left;
+            max-height:95%;
+            max-width:69%;
+            overflow-x: initial;
+            overflow-y: auto;
+            padding:1%;
+        }
+    }
+
+    @media only screen and (min-width: 600px) and (min-height: 800px), (min-width: 800px) and (min-height: 600px){
+        #airports {
+            background:#c0d0ff88;
+            border-radius:10px;
+            column-count:5;
+            column-gap:1%;
+            margin:auto;
+            max-height:95%;
+            max-width:80%;
+            overflow-x: initial;
+            overflow-y: auto;
+            padding:1%;
+        }
+
+        #flights {
+            background:#c0d0ff88;
+            border-radius:10px;
+            column-count:5;
+            column-gap:1%;
+            float:left;
+            max-height:95%;
+            max-width:69%;
+            overflow-x: initial;
+            overflow-y: auto;
+            padding:1%;
+        }
+    }
